[gd_scene load_steps=14 format=3 uid="uid://vs62iy3c0s6o"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_g4dbo"]
[ext_resource type="Script" path="res://scripts/turn_system.gd" id="2_n87ik"]
[ext_resource type="Script" path="res://scripts/map_handler.gd" id="3_1du6u"]
[ext_resource type="Script" path="res://scripts/movement_system.gd" id="3_ajdv5"]
[ext_resource type="Script" path="res://scripts/attack_system.gd" id="4_6eefx"]
[ext_resource type="PackedScene" uid="uid://c378755baohsr" path="res://maps/map1.tscn" id="4_xhv5r"]
[ext_resource type="Script" path="res://scripts/gui.gd" id="6_8hn7b"]
[ext_resource type="PackedScene" uid="uid://drjta4xldg0e0" path="res://scenes/action_panel.tscn" id="6_vdnp4"]
[ext_resource type="Script" path="res://scripts/entities.gd" id="7_voork"]
[ext_resource type="Script" path="res://scripts/battle_camera.gd" id="8_ha2av"]
[ext_resource type="PackedScene" uid="uid://bh4qptjfbfwss" path="res://scenes/character_stats_panel.tscn" id="9_ebxu3"]
[ext_resource type="Script" path="res://scripts/player_actions_panel.gd" id="10_g3o2k"]
[ext_resource type="Script" path="res://scripts/main_menu_container.gd" id="14_l4ddn"]

[node name="Main" type="Node2D"]
script = ExtResource("1_g4dbo")

[node name="Turn_system" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_n87ik")

[node name="Movement_system" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ajdv5")

[node name="Attack_system" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_6eefx")

[node name="MapHandler" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_1du6u")

[node name="Map" parent="MapHandler" instance=ExtResource("4_xhv5r")]
unique_name_in_owner = true

[node name="Visualizations" type="Node2D" parent="."]

[node name="Entities" type="Node2D" parent="."]
script = ExtResource("7_voork")

[node name="Cameras" type="Node2D" parent="."]

[node name="BattleCamera" type="Camera2D" parent="Cameras"]
unique_name_in_owner = true
position = Vector2(251, 282)
offset = Vector2(0, 51.21)
zoom = Vector2(0.875, 0.875)
limit_left = -610
limit_top = -135
limit_right = 945
limit_bottom = 675
editor_draw_limits = true
script = ExtResource("8_ha2av")

[node name="Gui" type="CanvasLayer" parent="."]
script = ExtResource("6_8hn7b")

[node name="bFinish" type="Button" parent="Gui"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.5
offset_top = -155.83
offset_right = 42.5
offset_bottom = -124.83
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
mouse_default_cursor_shape = 2
text = "Zatwierdź"

[node name="PanelContainer2" type="PanelContainer" parent="Gui"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -119.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Gui/PanelContainer2"]
layout_mode = 2
alignment = 1

[node name="AllyStatsPanel" parent="Gui/PanelContainer2/HBoxContainer" instance=ExtResource("9_ebxu3")]
unique_name_in_owner = true
layout_mode = 2
show_pa = true

[node name="PlayerActionsPanel" type="PanelContainer" parent="Gui/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.3
script = ExtResource("10_g3o2k")

[node name="HBoxContainer" type="HBoxContainer" parent="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel"]
layout_mode = 2
alignment = 1

[node name="Action1" parent="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer" instance=ExtResource("6_vdnp4")]
layout_mode = 2

[node name="Action2" parent="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer" instance=ExtResource("6_vdnp4")]
layout_mode = 2

[node name="Action3" parent="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer" instance=ExtResource("6_vdnp4")]
layout_mode = 2

[node name="Action4" parent="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer" instance=ExtResource("6_vdnp4")]
layout_mode = 2

[node name="Action5" parent="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer" instance=ExtResource("6_vdnp4")]
layout_mode = 2

[node name="EnemyStatsPanel" parent="Gui/PanelContainer2/HBoxContainer" instance=ExtResource("9_ebxu3")]
unique_name_in_owner = true
layout_mode = 2

[node name="teActions" type="TextEdit" parent="Gui"]
unique_name_in_owner = true
clip_contents = false
offset_right = 179.0
offset_bottom = 146.0
size_flags_horizontal = 3
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
scroll_fit_content_height = true

[node name="MainMenuContainer" type="TabContainer" parent="Gui"]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
current_tab = 0
tabs_visible = false
tab_focus_mode = 0
script = ExtResource("14_l4ddn")

[node name="MainMenu" type="CenterContainer" parent="Gui/MainMenuContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Gui/MainMenuContainer/MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/MainMenuContainer/MainMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Gui/MainMenuContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "WDTGW"
horizontal_alignment = 1

[node name="bToSelectLevel" type="Button" parent="Gui/MainMenuContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Wybierz poziom"

[node name="bQuit" type="Button" parent="Gui/MainMenuContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Wyjdź"

[node name="SelectMapMenu" type="CenterContainer" parent="Gui/MainMenuContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="Gui/MainMenuContainer/SelectMapMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/MainMenuContainer/SelectMapMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Gui/MainMenuContainer/SelectMapMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Wybierz poziom"
horizontal_alignment = 1

[node name="bBack" type="Button" parent="Gui/MainMenuContainer/SelectMapMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Powrót"

[node name="EndMenu" type="CenterContainer" parent="Gui/MainMenuContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="Gui/MainMenuContainer/EndMenu"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/MainMenuContainer/EndMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Gui/MainMenuContainer/EndMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Koniec Gry"

[node name="bBack" type="Button" parent="Gui/MainMenuContainer/EndMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Powrót"

[connection signal="player_actions_confirm" from="Gui" to="." method="_on_gui_player_actions_confirm"]
[connection signal="pressed" from="Gui/bFinish" to="Gui" method="_on_b_finish_pressed"]
[connection signal="pa_changed" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" to="Gui" method="_on_player_actions_panel_pa_changed"]
[connection signal="changed_type" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action1" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_1_changed_type"]
[connection signal="clicked_cell" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action1" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_1_clicked_cell"]
[connection signal="changed_type" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action2" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_2_changed_type"]
[connection signal="clicked_cell" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action2" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_2_clicked_cell"]
[connection signal="changed_type" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action3" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_3_changed_type"]
[connection signal="clicked_cell" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action3" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_3_clicked_cell"]
[connection signal="changed_type" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action4" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_4_changed_type"]
[connection signal="clicked_cell" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action4" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_4_clicked_cell"]
[connection signal="changed_type" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action5" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_5_changed_type"]
[connection signal="clicked_cell" from="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel/HBoxContainer/Action5" to="Gui/PanelContainer2/HBoxContainer/PlayerActionsPanel" method="_on_action_5_clicked_cell"]
[connection signal="pressed" from="Gui/MainMenuContainer/MainMenu/MarginContainer/VBoxContainer/bToSelectLevel" to="Gui/MainMenuContainer" method="_on_b_to_select_level_pressed"]
[connection signal="pressed" from="Gui/MainMenuContainer/MainMenu/MarginContainer/VBoxContainer/bQuit" to="Gui/MainMenuContainer" method="_on_b_quit_pressed"]
[connection signal="pressed" from="Gui/MainMenuContainer/SelectMapMenu/MarginContainer/VBoxContainer/bBack" to="Gui/MainMenuContainer" method="_on_b_back_pressed"]
[connection signal="pressed" from="Gui/MainMenuContainer/EndMenu/MarginContainer/VBoxContainer/bBack" to="Gui/MainMenuContainer" method="_on_b_back_pressed"]
